--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="maindiv1">
           <p>
-            En la seccion zona fan podemos agregar un carrousel de imagenes de banderas, tatuajes, y cosas de fanaticos
+            En la seccion zona fan podemos agregar un carrousel de imagenes de banderas, tatuajes, y cosas de fanaticos.
           </p>
         </div>
         <div class="maindiv1">
