--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Exo&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/9efdc6bdab.js" crossorigin="anonymous"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>La Scaloneta Fan Page</title>
   </head>
   <body>
@@ -92,7 +95,17 @@
     </main>
 
     <footer>
-      <p>Footer: Comision 23009</p>
+        <div class="foot1"><p class = logo-group>Grupo: Diego, Cami, Kei y Jordi. Codo a codo 4.0</p><p></p></div>
+        <div class="socialMedia">
+            <div><a href="https://www.instagram.com/afaseleccion/" target="_blank"><i class="fa-brands fa-instagram" href></i></a></div>
+            <div><a href="https://www.facebook.com/AFASeleccionArgentina/" target="_blank"><i class="fa-brands fa-facebook" href></i></a></div>
+            <div><a href="https://twitter.com/Argentina" target="_blank"><i class="fa-brands fa-twitter" href></i></a></div>
+            <div><a href="https://www.youtube.com/user/AFASeleccion" target="_blank"><i class="fa-brands fa-youtube" href></i></a></div>
+        </div>
+        <div class="foot1"><p class = logo-group>Entrega trabajo practico obligatorio 2023</p><p></p></div>
+      
+
+
     </footer>
   </body>
 </html>
