--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
     <footer>
       <p>Footer: Comision 23009</p>
+      <script src="app.js">jugador1()</script>
     </footer>
   </body>
 </html>
