--- a/zona_fan.html
+++ b/zona_fan.html
@@ -112,7 +112,7 @@
     <footer>
       <div class="foot1">
         <p class="logo-group">
-          Grupo: Diego, Jordi, Cami y Kei. Codo a codo 4.0
+          Grupo: Diego, Cami, Kei y Jordi. Codo a codo 4.0
         </p>
         <p></p>
       </div>
