agregado de imagen

--- a/index.html
+++ b/index.html
@@ -40,32 +40,38 @@
       <div><a href="./contacto.html" style="text-decoration: none;">Contacto</a></div>
     </nav>
 
+    <div class="carrousel">
+      <img src="./img/messi-seleccion-argentina-mundial.jpg" alt="">
+    </div>
+
     <main>
-      <div class="secciones">
-        <div class="maindiv1">
-          <h3>Seccion 1: Modificaciones</h3><br>
-          09/05 - Para empezar mergie la branch de jordi con el nuevo header. Saque los bordes de color negro. Modifique la animacion del header, ya no se achica sino que invierte los colores, me parecio que quedaba un poquito mas prolijo.
-          Aclare un poco el celeste del nav (lo hacemos con bootstrap?). Agregue el favicon, le puse el dibujo de la copa
-        </div>
-        <div class="maindiv1">
-          <h3>Seccion 2: Propuestas</h3><br>
-          <p>
-            En info podemos poner un poco de historia y algun iframe de maps de
-            donde queda el predio de la AFA
-          </p>
-          <p>
-            En la seccion plantilla podemos poner alguna foto de los jugadores y
-            cuerpo tecnico y mostrarlas como tarjetas de objetos
-          </p>
-          <p>
-            En la seccion zona fan podemos agregar un carrousel de imagenes de
-            banderas, tatuajes, y cosas de fanaticos.
-          </p>
-          <p>
-            En contacto podemos hacer el formulario para que nos llegue el mail
-            con la consulta del usuario
-          </p>
-        </div>
+      <div class="seccion">
+          
+          <div class="maindiv1">
+            <h3>Seccion 1: Modificaciones</h3><br>
+            09/05 - Para empezar mergie la branch de jordi con el nuevo header. Saque los bordes de color negro. Modifique la animacion del header, ya no se achica sino que invierte los colores, me parecio que quedaba un poquito mas prolijo.
+            Aclare un poco el celeste del nav (lo hacemos con bootstrap?). Agregue el favicon, le puse el dibujo de la copa
+          </div>
+          <div class="maindiv1">
+            <h3>Seccion 2: Propuestas</h3><br>
+            <p>
+              En info podemos poner un poco de historia y algun iframe de maps de
+              donde queda el predio de la AFA
+            </p>
+            <p>
+              En la seccion plantilla podemos poner alguna foto de los jugadores y
+              cuerpo tecnico y mostrarlas como tarjetas de objetos
+            </p>
+            <p>
+              En la seccion zona fan podemos agregar un carrousel de imagenes de
+              banderas, tatuajes, y cosas de fanaticos.
+            </p>
+            <p>
+              En contacto podemos hacer el formulario para que nos llegue el mail
+              con la consulta del usuario
+            </p>
+          </div>
+        
       </div>
 
       <aside>
@@ -112,7 +118,7 @@
     <footer>
       <div class="foot1">
         <p class="logo-group">
-          Grupo: Diego, Jordi, Cami y Kei. Codo a codo 4.0
+          Grupo: Diego, Jordi. Codo a codo 4.0
         </p>
         <p></p>
       </div>
