--- a/index.html
+++ b/index.html
@@ -29,127 +29,151 @@
     <title>La Scaloneta Fan Page</title>
   </head>
   <body>
-    <header>
-      <h1>⭐⭐⭐ <br> La Scaloneta Fan Page</h1>
-    </header>
+    <div class="cuerpo">
+      <header>
+        <h1>
+          ⭐⭐⭐ <br />
+          La Scaloneta Fan Page
+        </h1>
+      </header>
 
-    <nav>
-      <div><a href="./index.html" style="text-decoration: none;">Info</a></div>
-      <div><a href="./plantilla.html" style="text-decoration: none;">Los Campeones</a></div>
-      <div><a href="./zona_fan.html" style="text-decoration: none;">Fan Zone</a></div>
-      <div><a href="./contacto.html" style="text-decoration: none;">Contacto</a></div>
-    </nav>
+      <nav>
+        <div><a href="./index.html" style="text-decoration: none">Info</a></div>
+        <div>
+          <a href="./plantilla.html" style="text-decoration: none"
+            >Los Campeones</a
+          >
+        </div>
+        <div>
+          <a href="./zona_fan.html" style="text-decoration: none">Fan Zone</a>
+        </div>
+        <div>
+          <a href="./contacto.html" style="text-decoration: none">Contacto</a>
+        </div>
+      </nav>
 
-    <div class="carrousel">
-      <img src="./img/messi-seleccion-argentina-mundial.jpg" alt="">
-    </div>
+      <div class="carrousel">
+        <img src="./img/seleccion_1.jpg" alt="" />
+      </div>
 
-    <main>
-      <div class="seccion">
-          
-          <div class="maindiv1">
-            <h3>Seccion 1: Modificaciones</h3><br>
-            09/05 - Para empezar mergie la branch de jordi con el nuevo header. Saque los bordes de color negro. Modifique la animacion del header, ya no se achica sino que invierte los colores, me parecio que quedaba un poquito mas prolijo.
-            Aclare un poco el celeste del nav (lo hacemos con bootstrap?). Agregue el favicon, le puse el dibujo de la copa
-          </div>
-          <div class="maindiv1">
-            <h3>Seccion 2: Propuestas</h3><br>
+      <main>
+        <section>
+          <article>
+            <h3>Seccion 1: Modificaciones</h3>
+            <br />
+            09/05 - Para empezar mergie la branch de jordi con el nuevo header.
+            <br />
+            Saque los bordes de color negro. Modifique la animacion del header,
+            ya no se achica sino que invierte los colores, me parecio que
+            quedaba un poquito mas prolijo. <br />
+            Aclare un poco el celeste del nav (lo hacemos con bootstrap?).
+            <br />
+            Agregue el favicon, le puse el dibujo de la copa. <br>
+            <br> 12/05 - ajuste el
+            cuerpo de la pagina al centro para que no quede tan ancha cuando
+            esta maximizada <br />
+            Agregue el fondo a lo que queda por fuera del cuerpo de la pagina,
+            lo hice con una web que encontre en goole que hace un gradiente muy
+            bonito a mi parecer, pero si queres tambien se puede poner alguna
+            imagen <br />
+          </article>
+          <article>
+            <h3>Seccion 2: Propuestas</h3>
+            <br />
             <p>
-              En info podemos poner un poco de historia y algun iframe de maps de
-              donde queda el predio de la AFA
+              En info podemos poner un poco de historia y algun iframe de maps
+              de donde queda el predio de la AFA
             </p>
             <p>
-              En la seccion plantilla podemos poner alguna foto de los jugadores y
-              cuerpo tecnico y mostrarlas como tarjetas de objetos
+              En la seccion plantilla podemos poner alguna foto de los jugadores
+              y cuerpo tecnico y mostrarlas como tarjetas de objetos
             </p>
             <p>
               En la seccion zona fan podemos agregar un carrousel de imagenes de
               banderas, tatuajes, y cosas de fanaticos.
             </p>
             <p>
-              En contacto podemos hacer el formulario para que nos llegue el mail
-              con la consulta del usuario
+              En contacto podemos hacer el formulario para que nos llegue el
+              mail con la consulta del usuario
             </p>
+          </article>
+        </section>
+
+        <aside>
+          <h2>Consignas del TPO</h2>
+          <p>
+            Verifica que hayas incluido al menos 4 páginas html <br />
+            un formulario de contacto con validación de Javascript <br />
+            un Iframe <br />
+            íconos de FontAwesome o Flaticon y fuentes locales o de Google Fonts
+            <br />
+            una página completamente responsive con 3 puntos de corte para 3
+            tamaños de dispositivos distintos <br />
+            asegúrate de utilizar etiquetas semánticas para estructurar tu sitio
+            <br />
+            incorporar al menos una animación o transformación, y consumir una
+            API Rest desde JavaScript.<br /><br />
+
+            Cuida el diseño y la estética de tu sitio: No olvides que la
+            evaluación también considerará aspectos de diseño. Prestá atención a
+            la maquetación del sitio web, la alineación y márgenes entre los
+            elementos, la tipografía seleccionada, las fotografías y paleta de
+            colores acordes a la temática del proyecto, el logo utilizado y los
+            íconos y favicon. <br /><br />
+
+            Sincroniza el código del TPO en Github: Este requisito es
+            obligatorio, por lo que asegurate de sincronizar el código de tu
+            proyecto en Github y de enviar el link del repositorio al Instructor
+            al momento de entregar el proyecto. <br /><br />
+
+            Entrega a tiempo: Asegúrate de entregar el proyecto antes de la
+            fecha límite establecida. (26 de Mayo) <br /><br />
+
+            Comunícate con tus compañeros de grupo y el Instructor: Designá un
+            representante en tu grupo que se encargue de establecer contacto
+            directo con el Instructor del curso y de recibir la devolución del
+            proyecto. Además, mantén una buena comunicación con tus compañeros
+            de grupo para asegurarte de que el trabajo esté siendo completado de
+            manera efectiva. Tu Instructor te comunicará a partir de cuándo y
+            por dónde deberán enviar su TPO.
+          </p>
+        </aside>
+      </main>
+
+      <footer>
+        <div class="foot1">
+          <p class="logo-group">Grupo: Diego, Jordi. Codo a codo 4.0</p>
+          <p></p>
+        </div>
+        <div class="socialMedia">
+          <div>
+            <a href="https://www.instagram.com/afaseleccion/" target="_blank"
+              ><i class="fa-brands fa-instagram" href></i
+            ></a>
           </div>
-        
-      </div>
-
-      <aside>
-        <h2>Consignas del TPO</h2>
-        <p>
-          Revisa la consigna del proyecto con cuidado: Asegúrate de entender
-          todos los requisitos y de que tu proyecto cumpla con ellos. <br />
-          Verifica que hayas incluido al menos 4 páginas html, un formulario de
-          contacto con validación de Javascript, un Iframe, íconos de
-          FontAwesome o Flaticon y fuentes locales o de Google Fonts, y que
-          tengas una página completamente responsive con
-          <strong>
-            3 puntos de corte para 3 tamaños de dispositivos distintos</strong
-          >. Además, asegúrate de utilizar etiquetas semánticas para estructurar
-          tu sitio, incorporar al menos una animación o transformación, y
-          consumir una API Rest desde JavaScript.<br /><br />
-
-          Cuida el diseño y la estética de tu sitio: No olvides que la
-          evaluación también considerará aspectos de diseño. Prestá atención a
-          la maquetación del sitio web, la alineación y márgenes entre los
-          elementos, la tipografía seleccionada, las fotografías y paleta de
-          colores acordes a la temática del proyecto, el logo utilizado y los
-          íconos y favicon. <br /><br />
-
-          Sincroniza el código del TPO en Github: Este requisito es obligatorio,
-          por lo que asegurate de sincronizar el código de tu proyecto en Github
-          y de enviar el link del repositorio al Instructor al momento de
-          entregar el proyecto. <br /><br />
-
-          Entrega a tiempo: Asegúrate de entregar el proyecto antes de la fecha
-          límite establecida. <br /><br />
-
-          Comunícate con tus compañeros de grupo y el Instructor: Designá un
-          representante en tu grupo que se encargue de establecer contacto
-          directo con el Instructor del curso y de recibir la devolución del
-          proyecto. Además, mantén una buena comunicación con tus compañeros de
-          grupo para asegurarte de que el trabajo esté siendo completado de
-          manera efectiva. Tu Instructor te comunicará a partir de cuándo y por
-          dónde deberán enviar su TPO.
-        </p>
-      </aside>
-    </main>
-
-    <footer>
-      <div class="foot1">
-        <p class="logo-group">
-          Grupo: Diego, Jordi. Codo a codo 4.0
-        </p>
-        <p></p>
-      </div>
-      <div class="socialMedia">
-        <div>
-          <a href="https://www.instagram.com/afaseleccion/" target="_blank"
-            ><i class="fa-brands fa-instagram" href></i
-          ></a>
+          <div>
+            <a
+              href="https://www.facebook.com/AFASeleccionArgentina/"
+              target="_blank"
+              ><i class="fa-brands fa-facebook" href></i
+            ></a>
+          </div>
+          <div>
+            <a href="https://twitter.com/Argentina" target="_blank"
+              ><i class="fa-brands fa-twitter" href></i
+            ></a>
+          </div>
+          <div>
+            <a href="https://www.youtube.com/user/AFASeleccion" target="_blank"
+              ><i class="fa-brands fa-youtube" href></i
+            ></a>
+          </div>
         </div>
-        <div>
-          <a
-            href="https://www.facebook.com/AFASeleccionArgentina/"
-            target="_blank"
-            ><i class="fa-brands fa-facebook" href></i
-          ></a>
+        <div class="foot1">
+          <p class="logo-group">Entrega trabajo practico obligatorio 2023</p>
+          <p></p>
         </div>
-        <div>
-          <a href="https://twitter.com/Argentina" target="_blank"
-            ><i class="fa-brands fa-twitter" href></i
-          ></a>
-        </div>
-        <div>
-          <a href="https://www.youtube.com/user/AFASeleccion" target="_blank"
-            ><i class="fa-brands fa-youtube" href></i
-          ></a>
-        </div>
-      </div>
-      <div class="foot1">
-        <p class="logo-group">Entrega trabajo practico obligatorio 2023</p>
-        <p></p>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
