--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             quedaba un poquito mas prolijo. <br />
             Aclare un poco el celeste del nav (lo hacemos con bootstrap?).
             <br />
-            Agregue el favicon, le puse el dibujo de la copa. <br>
-            <br> 12/05 - ajuste el
-            cuerpo de la pagina al centro para que no quede tan ancha cuando
-            esta maximizada <br />
+            Agregue el favicon, le puse el dibujo de la copa. <br />
+            <br />
+            12/05 - ajuste el cuerpo de la pagina al centro para que no quede
+            tan ancha cuando esta maximizada <br />
             Agregue el fondo a lo que queda por fuera del cuerpo de la pagina,
             lo hice con una web que encontre en goole que hace un gradiente muy
             bonito a mi parecer, pero si queres tambien se puede poner alguna
