--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
 
       <footer>
         <div class="foot1">
-          <p class="logo-group">Grupo: Diego, Jordi. Codo a codo 4.0</p>
+          <p class="logo-group">
+            Grupo: Diego y Jordi. Codo a codo 4.0
+          </p>
           <p></p>
         </div>
         <div class="socialMedia">
@@ -160,6 +162,9 @@
               ><i class="fa-brands fa-youtube" href></i
             ></a>
           </div>
+        </div>
+        <div class = "afaLogoCont">
+          <a target="_blank" href="https://www.afa.com.ar/es/"><img class="afaLogo" src="/img/Logo afa.png"></a>
         </div>
         <div class="foot1">
           <p class="logo-group">Entrega trabajo practico obligatorio 2023</p>
