--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       </header>
 
       <nav>
-        <div><a href="./index.html" style="text-decoration: none">Info</a></div>
+        <div>
+          <a href="./index.html" style="text-decoration: none">Inicio</a>
+        </div>
         <div>
           <a href="./plantilla.html" style="text-decoration: none"
             >Los Campeones</a
@@ -59,75 +61,105 @@
       <main>
         <section>
           <article>
-            <h3>Seccion 1: Modificaciones</h3>
-            <br />
-            09/05 - Para empezar mergie la branch de jordi con el nuevo header.
-            <br />
-            Saque los bordes de color negro. Modifique la animacion del header,
-            ya no se achica sino que invierte los colores, me parecio que
-            quedaba un poquito mas prolijo. <br />
-            Aclare un poco el celeste del nav (lo hacemos con bootstrap?).
-            <br />
-            Agregue el favicon, le puse el dibujo de la copa. <br />
-            <br />
-            12/05 - ajuste el cuerpo de la pagina al centro para que no quede
-            tan ancha cuando esta maximizada <br />
-            Agregue el fondo a lo que queda por fuera del cuerpo de la pagina,
-            lo hice con una web que encontre en goole que hace un gradiente muy
-            bonito a mi parecer, pero si queres tambien se puede poner alguna
-            imagen <br />
+            <h3>
+              ¿Qué significa La Scaloneta, el apodo de la selección Argentina?
+            </h3>
+            <p>
+              <br />En medios escritos, digitales y principalmente en redes
+              sociales comenzó a surgir algo llamado 'La Scaloneta' un apodo
+              para hacer referencia al combinado nacional de Argentina y que
+              hasta el día de hoy permanece vigente.
+            </p>
+            <p>
+              <br />
+              Si bien, no hay una fecha exacta del surgimiento de este apodo,
+              todo parece haber comenzado después de la goleada 3-0 frente a
+              Ecuador por los cuartos de final de la Copa América 2021.
+              Resultado que hizo ilusionar a los millones de argentinos
+              sedientos de gloria y que fue uno de los primeros grandes pasos
+              previo a la consagración que tendrían más adelante.
+            </p>
+            <p>
+              <br />
+              Post partido los memes no se hicieron esperar y algunos tenían al
+              protagonista, Lionel Scaloni, manejando un colectivo con la frase
+              "La Scaloneta".
+            </p>
+            <div><br /></div>
+            <img
+              src="./img/scaloneta.jpg"
+              alt=""
+              width="100%
+            "
+            />
           </article>
           <article>
-            <h3>Seccion 2: Propuestas</h3>
+            <h3>
+              Todos los goles de la Selección Argentina en el Mundial de Qatar
+              2022
+            </h3>
             <br />
             <p>
-              En info podemos poner un poco de historia y algun iframe de maps
-              de donde queda el predio de la AFA
+              Reviví los 15 goles de la Selección Argentina en Catar 2022 y
+              volve a emocionarte como aquel día.
             </p>
-            <p>
-              En la seccion plantilla podemos poner alguna foto de los jugadores
-              y cuerpo tecnico y mostrarlas como tarjetas de objetos
-            </p>
-            <p>
-              En la seccion zona fan podemos agregar un carrousel de imagenes de
-              banderas, tatuajes, y cosas de fanaticos.
-            </p>
-            <p>
-              En contacto podemos hacer el formulario para que nos llegue el
-              mail con la consulta del usuario
-            </p>
+            <div><br /></div>
+            <iframe
+              width="100%"
+              height="400px"
+              src="https://www.youtube.com/embed/dY2GNZkv_F4"
+              title="YouTube video player"
+              frameborder="10"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
           </article>
         </section>
 
         <aside>
-          <h2>Consignas del TPO</h2>
+          <h2>El Invicto De La Albiceleste En La Era Scaloni<br /></h2>
+          <!-- El marquee lo habia visto una vez y se me ocurrio aplicarlo en esta seccion -->
           <p>
-            Verifica que hayas incluido al menos 4 páginas html <br />
-            un formulario de contacto con validación de Javascript <br />
-            un Iframe <br />
-            íconos de FontAwesome o Flaticon y fuentes locales o de Google Fonts
-            <br />
-            una página completamente responsive con 3 puntos de corte para 3
-            tamaños de dispositivos distintos <br />
-            asegúrate de utilizar etiquetas semánticas para estructurar tu sitio
-            <br />
-            incorporar al menos una animación o transformación, y consumir una
-            API Rest desde JavaScript.<br /><br />
-
-            Cuida el diseño y la estética de tu sitio: No olvides que la
-            evaluación también considerará aspectos de diseño. Prestá atención a
-            la maquetación del sitio web, la alineación y márgenes entre los
-            elementos, la tipografía seleccionada, las fotografías y paleta de
-            colores acordes a la temática del proyecto, el logo utilizado y los
-            íconos y favicon. <br /><br />
-
-            Sincroniza el código del TPO en Github: Este requisito es
-            obligatorio, por lo que asegurate de sincronizar el código de tu
-            proyecto en Github y de enviar el link del repositorio al Instructor
-            al momento de entregar el proyecto. <br /><br />
-
-            Entrega a tiempo: Asegúrate de entregar el proyecto antes de la
-            fecha límite establecida. (26 de Mayo) <br /><br />
+            <marquee behavior="scroll" direction="down" height="500px" scrolldelay="200"
+              >6/7/2019	Copa América 2019	2-1 vs. Chile<br /><br />
+              5/9/2019	Amistoso	0-0 vs. Chile<br /><br />
+              10/9/2019	Amistoso	4-0 vs. México<br /><br />
+              9/10/2019	Amistoso	2-2 vs. Alemania<br /><br />
+              13/10/2019	Amistoso	6-1 vs. Ecuador<br /><br />
+              15/11/2019	Amistoso	1-0 vs. Brasil<br /><br />
+              18/11/2019	Amistoso	2-2 vs. Uruguay<br /><br />
+              8/10/2020	Eliminatorias	1-0 vs. Ecuador<br /><br />
+              13/10/2020	Eliminatorias	2-1 vs. Bolivia<br /><br />
+              12/11/2020	Eliminatorias	1-1 vs. Paraguay<br /><br />
+              17/11/2020	Eliminatorias	2-0 vs. Perú<br /><br />
+              3/6/2021	Eliminatorias	1-1 vs. Chile<br /><br />
+              8/6/2021	Eliminatorias	2-2 vs. Colombia<br /><br />
+              14/6/2021	Copa América 2021	1-1 vs. Chile<br /><br />
+              18/6/2021	Copa América 2021	1-0 vs. Uruguay<br /><br />
+              21/6/2021	Copa América 2021	1-0 vs. Paraguay<br /><br />
+              28/6/2021	Copa América 2021	4-1 vs. Bolivia<br /><br />
+              3/7/2021	Copa América 2021	3-0 vs. Ecuador<br /><br />
+              6/7/2021	Copa América 2021	1-1 (3-2) vs. Colombia<br /><br />
+              10/7/2021	Copa América 2021	1-0 vs. Brasil<br /><br />
+              2/9/2021	Eliminatorias	3-1 vs. Venezuela<br /><br />
+              9/9/2021	Eliminatorias	3-0 vs. Bolivia<br /><br />
+              7/10/2021	Eliminatorias	0-0 vs. Paraguay<br /><br />
+              10/10/2021	Eliminatorias	3-0 vs. Uruguay<br /><br />
+              14/10/2021	Eliminatorias	1-0 vs. Perú<br /><br />
+              12/11/2021	Eliminatorias	1-0 vs. Uruguay<br /><br />
+              17/11/2021	Eliminatorias	0-0 vs. Brasil<br /><br />
+              27/1/2022	Eliminatorias	2-1 vs. Chile<br /><br />
+              1/2/2022	Eliminatorias	1-0 vs. Colombia<br /><br />
+              25/3/2022	Eliminatorias	3-0 vs. Venezuela<br /><br />
+              29/3/2022	Eliminatorias	1-1 vs. Ecuador<br /><br />
+              1/6/2022	Finalissima	3-0 vs. Italia<br /><br />
+              5/6/2022	Amistoso	5-0 vs. Estonia<br /><br />
+              23/9/2022	Amistoso	3-0 vs. Honduras<br /><br />
+              27/9/2022	Amistoso	3-0 vs. Jamaica<br /><br />
+              16/11/22	Amistoso	5-0 vs. Emiratos Árabes<br /><br />
+              22/11/22	Mundial Qatar 2022	Argentina 1-2 Arabia Saudita<br /><br />
+              </marquee
+            >
           </p>
         </aside>
       </main>
