--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
         <div class="afaLogoCont">
           <a target="_blank" href="https://www.afa.com.ar/es/"
-            ><img class="afaLogo" src="/img/Logo afa.png" />
+            ><img class="afaLogo" src="./img/Logo afa.png" />
           </a>
         </div>
         <div class="foot1">
