--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
             <p> <img src="./img/arg.png" alt="" height="30px"> VS. <img src="./img/indo.png" alt="" height="30px"> </p><br>
           </div>
           <div>
-            <br><h2>El Invicto De La Albiceleste En La Era Scaloni<br /></h2>
+            <br><h2>El Invicto De La Albiceleste En La Era Scaloni</h2><br>
             <!-- El marquee lo habia visto una vez y se me ocurrio aplicarlo en esta seccion -->
             <p>
-              <marquee behavior="scroll" direction="down" height="500px" scrolldelay="200"
+              <marquee behavior="scroll" direction="down" height="400px" scrolldelay="200"
                 >6/7/2019	Copa América 2019	2-1 vs. Chile<br /><br />
                 5/9/2019	Amistoso	0-0 vs. Chile<br /><br />
                 10/9/2019	Amistoso	4-0 vs. México<br /><br />
