modified:   campeones.html 	renamed:    form.html -> contacto.html 	new file:   fanzone.html 	new file:   img/fan1.jpg 	new file:   img/fan2.jpg 	new file:   img/fan3.jpg 	new file:   img/fan4.jpg 	modified:   index.html 	modified:   style.css

--- a/campeones.html
+++ b/campeones.html
@@ -49,10 +49,10 @@
           >
         </div>
         <div>
-          <a href="./zona_fan.html" style="text-decoration: none">Fan Zone</a>
+          <a href="./fanzone.html" style="text-decoration: none">Fan Zone</a>
         </div>
         <div>
-          <a href="./form.html" style="text-decoration: none">Contacto</a>
+          <a href="./contacto.html" style="text-decoration: none">Contacto</a>
         </div>
       </nav>
 
