--- a/fanzone.html
+++ b/fanzone.html
@@ -1,153 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/9efdc6bdab.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/9efdc6bdab.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <!-- Icono favicon -->
-    <link rel="shortcut icon" href="./assets/copa-mundial.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./assets/copa-mundial.ico"
+      type="image/x-icon"
+    />
     <!-- Titulo Web -->
     <title>La Scaloneta Fan Page</title>
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="cuerpo">
-        <header>
-            <h1>
-                ⭐⭐⭐ <br />
-                La Scaloneta Fan Page
-            </h1>
-        </header>
+      <header>
+        <h1>
+          ⭐⭐⭐ <br />
+          La Scaloneta Fan Page
+        </h1>
+      </header>
 
-        <nav>
-            <div>
-                <a href="./index.html" style="text-decoration: none">Inicio</a>
-            </div>
-            <div>
-                <a href="./campeones.html" style="text-decoration: none">Los Campeones</a>
-            </div>
-            <div>
-                <a href="./fanzone.html" style="text-decoration: none">Fan Zone</a>
-            </div>
-            <div>
-                <a href="/contacto.html" style="text-decoration: none">Contacto</a>
-            </div>
-        </nav>
-
-        <div class="carrousel">
-            <img src="./img/seleccion_1.jpg" alt="" />
+      <nav>
+        <div>
+          <a href="./index.html" style="text-decoration: none">Inicio</a>
         </div>
+        <div>
+          <a href="./campeones.html" style="text-decoration: none"
+            >Los Campeones</a
+          >
+        </div>
+        <div>
+          <a href="./fanzone.html" style="text-decoration: none">Fan Zone</a>
+        </div>
+        <div>
+          <a href="./contacto.html" style="text-decoration: none">Contacto</a>
+        </div>
+      </nav>
 
-        <main>
-            <section>
-                <article>
-                    <h3 style="text-align: center;">¡Vive las experiencias de los fans!</h3>
-                    <p><br>¡Miles de aficionados nos mandan sus experiencias todos los dias! <br><br> ¡Tu también puedes
-                        ser parte de esta locura! Ponte en <a href="/contacto.html">contacto con nosotros</a> para
-                        compartir tus aventuras de la Scaloneta.</p>
-                </article>
-                <div class="slider-frame">
-                    <ul>
-                        <li><img src="/img/fan1.jpg" alt=""></li>
-                        <li><img src="/img/fan2.jpg" alt=""></li>
-                        <li><img src="/img/fan3.jpg" alt=""></li>
-                        <li><img src="/img/fan4.jpg" alt=""></li>
-                    </ul>
-                </div>
-            </section>
+      <div class="carrousel">
+        <img src="./img/seleccion_1.jpg" alt="" />
+      </div>
 
+      <main>
+        <section>
+          <article>
+            <h3 style="text-align: center">
+              ¡Vive las experiencias de los fans!
+            </h3>
+            <p>
+              <br />¡Miles de aficionados nos mandan sus experiencias todos los
+              dias! <br /><br />
+              ¡Tu también puedes ser parte de esta locura! Ponte en
+              <a href="/contacto.html">contacto con nosotros</a> para compartir
+              tus aventuras de la Scaloneta.
+            </p>
+          </article>
+          <div class="slider-frame">
+            <ul>
+              <li><img src="/img/fan1.jpg" alt="" /></li>
+              <li><img src="/img/fan2.jpg" alt="" /></li>
+              <li><img src="/img/fan3.jpg" alt="" /></li>
+              <li><img src="/img/fan4.jpg" alt="" /></li>
+            </ul>
+          </div>
+        </section>
 
-            <aside>
-                <h2>El Invicto De La Albiceleste En La Era Scaloni<br /></h2>
-                <!-- El marquee lo habia visto una vez y se me ocurrio aplicarlo en esta seccion -->
-                <p>
-                    <marquee behavior="scroll" direction="down" height="500px" scrolldelay="200">6/7/2019 Copa América
-                        2019 2-1 vs. Chile<br /><br />
-                        5/9/2019 Amistoso 0-0 vs. Chile<br /><br />
-                        10/9/2019 Amistoso 4-0 vs. México<br /><br />
-                        9/10/2019 Amistoso 2-2 vs. Alemania<br /><br />
-                        13/10/2019 Amistoso 6-1 vs. Ecuador<br /><br />
-                        15/11/2019 Amistoso 1-0 vs. Brasil<br /><br />
-                        18/11/2019 Amistoso 2-2 vs. Uruguay<br /><br />
-                        8/10/2020 Eliminatorias 1-0 vs. Ecuador<br /><br />
-                        13/10/2020 Eliminatorias 2-1 vs. Bolivia<br /><br />
-                        12/11/2020 Eliminatorias 1-1 vs. Paraguay<br /><br />
-                        17/11/2020 Eliminatorias 2-0 vs. Perú<br /><br />
-                        3/6/2021 Eliminatorias 1-1 vs. Chile<br /><br />
-                        8/6/2021 Eliminatorias 2-2 vs. Colombia<br /><br />
-                        14/6/2021 Copa América 2021 1-1 vs. Chile<br /><br />
-                        18/6/2021 Copa América 2021 1-0 vs. Uruguay<br /><br />
-                        21/6/2021 Copa América 2021 1-0 vs. Paraguay<br /><br />
-                        28/6/2021 Copa América 2021 4-1 vs. Bolivia<br /><br />
-                        3/7/2021 Copa América 2021 3-0 vs. Ecuador<br /><br />
-                        6/7/2021 Copa América 2021 1-1 (3-2) vs. Colombia<br /><br />
-                        10/7/2021 Copa América 2021 1-0 vs. Brasil<br /><br />
-                        2/9/2021 Eliminatorias 3-1 vs. Venezuela<br /><br />
-                        9/9/2021 Eliminatorias 3-0 vs. Bolivia<br /><br />
-                        7/10/2021 Eliminatorias 0-0 vs. Paraguay<br /><br />
-                        10/10/2021 Eliminatorias 3-0 vs. Uruguay<br /><br />
-                        14/10/2021 Eliminatorias 1-0 vs. Perú<br /><br />
-                        12/11/2021 Eliminatorias 1-0 vs. Uruguay<br /><br />
-                        17/11/2021 Eliminatorias 0-0 vs. Brasil<br /><br />
-                        27/1/2022 Eliminatorias 2-1 vs. Chile<br /><br />
-                        1/2/2022 Eliminatorias 1-0 vs. Colombia<br /><br />
-                        25/3/2022 Eliminatorias 3-0 vs. Venezuela<br /><br />
-                        29/3/2022 Eliminatorias 1-1 vs. Ecuador<br /><br />
-                        1/6/2022 Finalissima 3-0 vs. Italia<br /><br />
-                        5/6/2022 Amistoso 5-0 vs. Estonia<br /><br />
-                        23/9/2022 Amistoso 3-0 vs. Honduras<br /><br />
-                        27/9/2022 Amistoso 3-0 vs. Jamaica<br /><br />
-                        16/11/22 Amistoso 5-0 vs. Emiratos Árabes<br /><br />
-                        22/11/22 Mundial Qatar 2022 Argentina 1-2 Arabia Saudita<br /><br />
-                    </marquee>
-                </p>
-            </aside>
-        </main>
+        <aside>
+          <div class="proxPart">
+            <h2>Proximos Partidos</h2>
+            <br />
+            <h4>15/06 Amistoso:</h4>
+            <br />
+            <p>
+              <img src="./img/arg.png" alt="" height="30px" /> VS.
+              <img src="./img/aus.png" alt="" height="30px" />
+            </p>
+            <br />
+            <h4>19/06 Amistoso:</h4>
+            <br />
+            <p>
+              <img src="./img/arg.png" alt="" height="30px" /> VS.
+              <img src="./img/indo.png" alt="" height="30px" />
+            </p>
+            <br />
+          </div>
+          <div>
+            <br />
+            <h2>El Invicto De La Albiceleste En La Era Scaloni</h2>
+            <br />
+            <!-- El marquee lo habia visto una vez y se me ocurrio aplicarlo en esta seccion -->
+            <p>
+              <marquee
+                behavior="scroll"
+                direction="down"
+                height="400px"
+                scrolldelay="200"
+                >6/7/2019 Copa América 2019 2-1 vs. Chile<br /><br />
+                5/9/2019 Amistoso 0-0 vs. Chile<br /><br />
+                10/9/2019 Amistoso 4-0 vs. México<br /><br />
+                9/10/2019 Amistoso 2-2 vs. Alemania<br /><br />
+                13/10/2019 Amistoso 6-1 vs. Ecuador<br /><br />
+                15/11/2019 Amistoso 1-0 vs. Brasil<br /><br />
+                18/11/2019 Amistoso 2-2 vs. Uruguay<br /><br />
+                8/10/2020 Eliminatorias 1-0 vs. Ecuador<br /><br />
+                13/10/2020 Eliminatorias 2-1 vs. Bolivia<br /><br />
+                12/11/2020 Eliminatorias 1-1 vs. Paraguay<br /><br />
+                17/11/2020 Eliminatorias 2-0 vs. Perú<br /><br />
+                3/6/2021 Eliminatorias 1-1 vs. Chile<br /><br />
+                8/6/2021 Eliminatorias 2-2 vs. Colombia<br /><br />
+                14/6/2021 Copa América 2021 1-1 vs. Chile<br /><br />
+                18/6/2021 Copa América 2021 1-0 vs. Uruguay<br /><br />
+                21/6/2021 Copa América 2021 1-0 vs. Paraguay<br /><br />
+                28/6/2021 Copa América 2021 4-1 vs. Bolivia<br /><br />
+                3/7/2021 Copa América 2021 3-0 vs. Ecuador<br /><br />
+                6/7/2021 Copa América 2021 1-1 (3-2) vs. Colombia<br /><br />
+                10/7/2021 Copa América 2021 1-0 vs. Brasil<br /><br />
+                2/9/2021 Eliminatorias 3-1 vs. Venezuela<br /><br />
+                9/9/2021 Eliminatorias 3-0 vs. Bolivia<br /><br />
+                7/10/2021 Eliminatorias 0-0 vs. Paraguay<br /><br />
+                10/10/2021 Eliminatorias 3-0 vs. Uruguay<br /><br />
+                14/10/2021 Eliminatorias 1-0 vs. Perú<br /><br />
+                12/11/2021 Eliminatorias 1-0 vs. Uruguay<br /><br />
+                17/11/2021 Eliminatorias 0-0 vs. Brasil<br /><br />
+                27/1/2022 Eliminatorias 2-1 vs. Chile<br /><br />
+                1/2/2022 Eliminatorias 1-0 vs. Colombia<br /><br />
+                25/3/2022 Eliminatorias 3-0 vs. Venezuela<br /><br />
+                29/3/2022 Eliminatorias 1-1 vs. Ecuador<br /><br />
+                1/6/2022 Finalissima 3-0 vs. Italia<br /><br />
+                5/6/2022 Amistoso 5-0 vs. Estonia<br /><br />
+                23/9/2022 Amistoso 3-0 vs. Honduras<br /><br />
+                27/9/2022 Amistoso 3-0 vs. Jamaica<br /><br />
+                16/11/22 Amistoso 5-0 vs. Emiratos Árabes<br /><br />
+                22/11/22 Mundial Qatar 2022 Argentina 1-2 Arabia Saudita<br /><br />
+              </marquee>
+            </p>
+          </div>
+        </aside>
+      </main>
 
-        <footer>
-            <div class="foot1">
-                <p class="logo-group">Grupo: Diego y Jordi. Codo a codo 4.0</p>
-                <p></p>
-            </div>
-            <div class="socialMedia">
-                <div>
-                    <a href="https://www.instagram.com/afaseleccion/" target="_blank"><i class="fa-brands fa-instagram"
-                            href></i></a>
-                </div>
-                <div>
-                    <a href="https://www.facebook.com/AFASeleccionArgentina/" target="_blank"><i
-                            class="fa-brands fa-facebook" href></i></a>
-                </div>
-                <div>
-                    <a href="https://twitter.com/Argentina" target="_blank"><i class="fa-brands fa-twitter"
-                            href></i></a>
-                </div>
-                <div>
-                    <a href="https://www.youtube.com/user/AFASeleccion" target="_blank"><i class="fa-brands fa-youtube"
-                            href></i></a>
-                </div>
-            </div>
-            <div class="afaLogoCont">
-                <a target="_blank" href="https://www.afa.com.ar/es/"><img class="afaLogo" src="./img/Logo afa.png" />
-                </a>
-            </div>
-            <div class="foot1">
-                <p class="logo-group">Entrega trabajo practico obligatorio 2023</p>
-                <p></p>
-            </div>
-        </footer>
+      <footer>
+        <div class="foot1">
+          <p class="logo-group">Grupo: Diego y Jordi. Codo a codo 4.0</p>
+          <p></p>
+        </div>
+        <div class="socialMedia">
+          <div>
+            <a href="https://www.instagram.com/afaseleccion/" target="_blank"
+              ><i class="fa-brands fa-instagram" href></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://www.facebook.com/AFASeleccionArgentina/"
+              target="_blank"
+              ><i class="fa-brands fa-facebook" href></i
+            ></a>
+          </div>
+          <div>
+            <a href="https://twitter.com/Argentina" target="_blank"
+              ><i class="fa-brands fa-twitter" href></i
+            ></a>
+          </div>
+          <div>
+            <a href="https://www.youtube.com/user/AFASeleccion" target="_blank"
+              ><i class="fa-brands fa-youtube" href></i
+            ></a>
+          </div>
+        </div>
+        <div class="afaLogoCont">
+          <a target="_blank" href="https://www.afa.com.ar/es/"
+            ><img class="afaLogo" src="./img/Logo afa.png" />
+          </a>
+        </div>
+        <div class="foot1">
+          <p class="logo-group">Entrega trabajo practico obligatorio 2023</p>
+          <p></p>
+        </div>
+      </footer>
     </div>
-
-</body>
-
-
-
+  </body>
 </html>
