--- a/contacto.html
+++ b/contacto.html
@@ -99,7 +99,7 @@
               <input
                 class="inputsForm"
                 type="text"
-                id="Nombre"
+                id="Apellido"
                 name="lastname"
                 required
                 placeholder="Ingresa tu apellido"
@@ -238,6 +238,9 @@
         </div>
       </footer>
     </div>
+
+
+    
     <script>
       const $form = document.querySelector("#form");
       $form.addEventListener("submit", handleSubmit);
