--- a/fanzone.html
+++ b/fanzone.html
@@ -76,10 +76,10 @@
           </article>
           <div class="slider-frame">
             <ul>
-              <li><img src="/img/fan1.jpg" alt="" /></li>
-              <li><img src="/img/fan2.jpg" alt="" /></li>
-              <li><img src="/img/fan3.jpg" alt="" /></li>
-              <li><img src="/img/fan4.jpg" alt="" /></li>
+              <li><img src="./img/fan1.jpg" alt="" /></li>
+              <li><img src="./img/fan2.jpg" alt="" /></li>
+              <li><img src="./img/fan3.jpg" alt="" /></li>
+              <li><img src="./img/fan4.jpg" alt="" /></li>
             </ul>
           </div>
         </section>
